# ugit-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  annotated.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  base_8hpp.html  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  base_8hpp_source.html  branchSubcommand_8cpp.html  branchSubcommand_8cpp__incl.map  branchSubcommand_8cpp__incl.md5  branchSubcommand_8hpp.html  branchSubcommand_8hpp__dep__incl.map  branchSubcommand_8hpp__dep__incl.md5  branchSubcommand_8hpp__incl.map  branchSubcommand_8hpp__incl.md5  branchSubcommand_8hpp_source.html  catFileSubcommand_8cpp.html  catFileSubcommand_8cpp__incl.map  catFileSubcommand_8cpp__incl.md5  catFileSubcommand_8hpp.html  catFileSubcommand_8hpp__dep__incl.map  catFileSubcommand_8hpp__dep__incl.md5  catFileSubcommand_8hpp__incl.map  catFileSubcommand_8hpp__incl.md5  catFileSubcommand_8hpp_source.html  checkoutSubcommand_8cpp.html  checkoutSubcommand_8cpp__incl.map  checkoutSubcommand_8cpp__incl.md5  checkoutSubcommand_8hpp.html  checkoutSubcommand_8hpp__dep__incl.map  checkoutSubcommand_8hpp__dep__incl.md5  checkoutSubcommand_8hpp__incl.map  checkoutSubcommand_8hpp__incl.md5  (+197 more)
ugit-cpp/cli/: CMakeLists.txt  branchSubcommand.cpp  branchSubcommand.hpp  catFileSubcommand.cpp  catFileSubcommand.hpp  checkoutSubcommand.cpp  checkoutSubcommand.hpp  cli.cpp  cli.hpp  commitSubcommand.cpp  commitSubcommand.hpp  diffSubcommand.cpp  diffSubcommand.hpp  hashObjectSubcommand.cpp  hashObjectSubcommand.hpp  initSubcommand.cpp  (+17 more)
(+65 files in other folders)
